[tool.poetry]
name = "certbot-docker"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8"
certbot-dns-ovh = "*"
# https://github.com/certbot/certbot/issues/8826
dns-lexicon = "<3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
